--- a/src/main/webapp/hr/hr_report_shift_table.xhtml
+++ b/src/main/webapp/hr/hr_report_shift_table.xhtml
@@ -38,7 +38,7 @@
 
             </h:panelGrid>
 
-            <p:panel id="print2" styleClass="summeryBorder">
+            <p:panel id="print2" styleClass="noBorder summeryBorder">
                 <f:facet name="header">
                     <h:outputLabel value="Roster Of #{shiftTableController.roster.name}"/><br/>
                     <h:outputLabel value="#{shiftTableController.fromDate}">
