--- a/src/main/webapp/hr/hr_report_attendance_late_in_early_out.xhtml
+++ b/src/main/webapp/hr/hr_report_attendance_late_in_early_out.xhtml
@@ -23,12 +23,12 @@
                             <p:calendar value="#{hrReportController.fromDate}" pattern="dd MMMM yyyy hh:mm:ss a" />
                             <h:outputLabel value="To : " />
                             <p:calendar value="#{hrReportController.toDate}" pattern="dd MMMM yyyy hh:mm:ss a" />
-                            <h:outputLabel value="Employee : "/>
-                            <hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>
                             <h:outputLabel value="Institution : "/>
-                            <hr:institution value="#{hrReportController.reportKeyWord.institution}"/>
+                            <hr:institution value="#{hrReportController.reportKeyWord.institution}"/>                           
                             <h:outputLabel value="Department : "/>
                             <hr:department value="#{hrReportController.reportKeyWord.department}"/>
+                            <h:outputLabel value="Employee : "/>
+                            <hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>
                             <h:outputLabel value="Staff Category : "/>
                             <hr:completeStaffCategory value="#{hrReportController.reportKeyWord.staffCategory}"/>
                             <h:outputLabel value="Designation : "/>
@@ -51,10 +51,36 @@
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
                         </p:commandButton>
-                        <p:panel id="gpBillPreview" >                     
+                        <p:panel id="gpBillPreview"  styleClass="noBorder summeryBorder" >                    
                             <p:dataTable id="tb1" value="#{hrReportController.staffShifts}" var="ss" rowStyleClass="#{ss.considerForLateIn eq true ? 'greenText':''}">
+                                <f:facet name="header">
+                                    <p:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    <h:outputLabel value="Attendance Report (Late In and Early Out)"/><br/>
+                                    <h:outputLabel value="  From : "  />
+                                    <h:outputLabel  value="#{hrReportController.fromDate}" >
+                                        <f:convertDateTime pattern="dd MM yy HH:mm:ss "/>
+                                    </h:outputLabel>
+                                    <h:outputLabel/>
+                                    <h:outputLabel/>
+                                    <h:outputLabel value="  To : "/> 
+                                    <h:outputLabel  value="#{hrReportController.toDate}">
+                                        <f:convertDateTime pattern="dd MM yy HH:mm:ss "/>
+                                    </h:outputLabel><br/>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.institution ne null}" >
+                                        <h:outputLabel value="#{hrReportController.reportKeyWord.institution.name}" />
+                                        <br/>
+                                    </h:panelGroup>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.department ne null}" >
+                                        <h:outputLabel value="Department : #{hrReportController.reportKeyWord.department.name}"/>
+                                        <br/>
+                                    </h:panelGroup>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.staff ne null}" >
+                                        <h:outputLabel value="Staff : #{hrReportController.reportKeyWord.staff.person.name}"/>
+                                        <br/>
+                                    </h:panelGroup>
+                                </f:facet>
                                 <p:column headerText="Emp No">
-                                    <f:facet name="header">
+                                    <f:facet name="header">                                     
                                         <h:outputLabel value="Emp No"  />
                                     </f:facet>
                                     <p:outputLabel value=" #{ss.staff.code}"></p:outputLabel>
@@ -113,12 +139,12 @@
                                     <h:outputLabel value="#{ss.lateInVarified}">                                        
                                     </h:outputLabel>
                                 </p:column>
-<!--                                <p:column headerText="n">
-                                    <f:facet name="header">
-                                        <h:outputLabel value="n"  />
-                                    </f:facet>
-                                    <p:outputLabel value="#{ss.startRecord.recordTimeStamp}"></p:outputLabel>
-                                </p:column>-->
+                                <!--                                <p:column headerText="n">
+                                                                    <f:facet name="header">
+                                                                        <h:outputLabel value="n"  />
+                                                                    </f:facet>
+                                                                    <p:outputLabel value="#{ss.startRecord.recordTimeStamp}"></p:outputLabel>
+                                                                </p:column>-->
                                 <p:column headerText="n">
                                     <f:facet name="header">
                                         <h:outputLabel value="n"  />
@@ -173,7 +199,14 @@
                                     </f:facet>
                                     <p:outputLabel value="#{ss.referenceStaffShiftEarlyOut}"></p:outputLabel>
                                 </p:column>
-                                
+                                <f:facet name="footer">
+                                    <p:outputLabel value="Print By : #{sessionController.loggedUser.webUserPerson.name} - " />
+                                    <p:outputLabel value="Print At : " />
+                                    <p:outputLabel value="#{commonController.currentDateTime}" >
+                                        <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a " />
+                                    </p:outputLabel>
+                                </f:facet>
+
                             </p:dataTable>
                         </p:panel>
 
