--- a/src/main/webapp/hr/hr_report_department.xhtml
+++ b/src/main/webapp/hr/hr_report_department.xhtml
@@ -15,25 +15,32 @@
 
                 <h:form>
                     <p:panel header="Department List" >
-                        <p:panel>
-                            <h:outputLabel value="Institution"/>
+                        <h:panelGrid columns="2">
+                            <h:outputLabel value="Institution :"/>
                             <p:autoComplete converter="institutionConverter" value="#{hrReportController.institution}"
                                             completeMethod="#{institutionController.completeCompany}" 
                                             forceSelection="true"
                                             var="vt" itemLabel="#{vt.name}" itemValue="#{vt}" />
-                            <p:commandButton ajax="false" action="#{hrReportController.crateDepartmentList}" value="Fill" />
-                            <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;" >
-                                <p:printer target="reportPrint"  />
-                            </p:commandButton>
+                        </h:panelGrid>
+                        <p:commandButton ajax="false" action="#{hrReportController.crateDepartmentList}" value="Fill" />
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >
+                            <p:printer target="reportPrint"></p:printer>
+                        </p:commandButton>
+                        <p:commandButton actionListener="#{hrReportController.crateDepartmentList}" ajax="false" value="Excel" styleClass="noPrintButton"  >
+                            <pe:exporter type="xlsx" target="tbl1" fileName="hr_report_department"  />
+                        </p:commandButton> 
 
-                            <p:commandButton actionListener="#{hrReportController.crateDepartmentList}" ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
-                                <pe:exporter type="xlsx" target="tbl1" fileName="hr_report_department"  />
-                            </p:commandButton> 
-                        </p:panel>
-                        <p:panel header="Department List" id="reportPrint">
+
+                        <p:panel id="reportPrint" styleClass="noBorder summeryBorder"  >
                             <p:dataTable value="#{hrReportController.selectDepartments}" var="d" id="tbl1" rowIndexVar="i">
                                 <f:facet name="header" >
+                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
                                     <p:outputLabel value="Department List" />
+                                    <h:panelGroup rendered="#{hrReportController.institution ne null}" >
+                                        <br/>
+                                        <h:outputLabel value="#{hrReportController.institution.name}" />
+                                        <br/>
+                                    </h:panelGroup>
                                 </f:facet>
                                 <p:column headerText="No">
                                     <f:facet name="header" >
@@ -59,6 +66,13 @@
                                     </f:facet>
                                     <p:outputLabel value="#{d.institution.name}" />
                                 </p:column>
+                                <f:facet name="footer">
+                                    <p:outputLabel value="Print By : #{sessionController.loggedUser.webUserPerson.name} - " />
+                                    <p:outputLabel value="Print At : " />
+                                    <p:outputLabel value="#{commonController.currentDateTime}" >
+                                        <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a " />
+                                    </p:outputLabel>
+                                </f:facet>
                             </p:dataTable>
                         </p:panel>
                     </p:panel>
