--- a/src/main/webapp/hr/hr_report_staff_salary_component.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_component.xhtml
@@ -39,12 +39,12 @@
                                     <h:outputText value="#{t.salaryMonth}" />
                                 </p:column>
                             </p:selectOneMenu>
-                            <h:outputLabel value="Employee : "/>
-                            <hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>
+                            <h:outputLabel value="Institution : "/>
+                            <hr:institution value="#{hrReportController.reportKeyWord.institution}"/>                           
                             <h:outputLabel value="Department : "/>
                             <hr:department value="#{hrReportController.reportKeyWord.department}"/>
-                            <h:outputLabel value="Institution : "/>
-                            <hr:institution value="#{hrReportController.reportKeyWord.institution}"/>
+                            <h:outputLabel value="Employee : "/>
+                            <hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>
                             <h:outputLabel value="Staff Category : "/>
                             <hr:completeStaffCategory value="#{hrReportController.reportKeyWord.staffCategory}"/>
                             <h:outputLabel value="Staff Designation : "/>
@@ -66,10 +66,37 @@
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
                         </p:commandButton>
-                        <p:panel id="gpBillPreview" >                     
+                        <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder" >                     
                             <p:dataTable id="tb1" value="#{hrReportController.staffSalaryComponants}" var="ss">
+                                <f:facet name="header">
+                                    <p:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    <h:outputLabel value="Staff Salary Component"/>
+                                    <br/>
+                                    <h:outputLabel value="Salary Cycle : #{hrReportController.reportKeyWord.salaryCycle.name}" />
+                                    <br/>
+                                    <h:outputLabel value="SC Cycle : " />
+                                    <h:outputLabel value="#{hrReportController.reportKeyWord.salaryCycle.workedFromDate}" >
+                                        <f:convertDateTime pattern="yyyy MMM dd hh:mm:ss a" />
+                                    </h:outputLabel>
+                                    <h:outputLabel value="#{hrReportController.reportKeyWord.salaryCycle.workedToDate}"  >
+                                        <f:convertDateTime pattern="yyyy MMM dd hh:mm:ss a" />
+                                    </h:outputLabel>
+                                    <br/>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.institution ne null}" >
+                                        <h:outputLabel value="Institution : #{hrReportController.reportKeyWord.institution.name}"/>
+                                        <br/>
+                                    </h:panelGroup>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.department ne null}" >
+                                        <h:outputLabel value="Department : #{hrReportController.reportKeyWord.department.name}"/>
+                                        <br/>
+                                    </h:panelGroup>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.staff.person.name ne null}" >
+                                        <h:outputLabel value="Staff : #{hrReportController.reportKeyWord.staff.person.name}"/>
+                                        <br/>
+                                    </h:panelGroup>
+                            </f:facet>
                                 <p:column headerText="Emp No">
-                                    <f:facet name="header">
+                                    <f:facet name="header">         
                                         <h:outputLabel value="Emp No"  />
                                     </f:facet>
                                     <p:outputLabel value="#{ss.staffSalary.staff.codeInterger}" >
@@ -143,9 +170,16 @@
                                         <f:convertNumber pattern="#,##0.00" />
                                     </p:outputLabel>
                                 </p:column>
-
+                                <f:facet name="footer">
+                                    <p:outputLabel value="Print By : #{sessionController.loggedUser.webUserPerson.name} - " />
+                                    <p:outputLabel value="Print At : " />
+                                    <p:outputLabel value="#{commonController.currentDateTime}" >
+                                        <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a " />
+                                    </p:outputLabel>
+                                </f:facet>
                             </p:dataTable>
                         </p:panel>
+
                         <p:panel rendered="#{hrReportController.reportKeyWord.institutionBank ne null and hrReportController.reportKeyWord.paysheetComponent ne null}" >
                             <p:commandButton value="Print" ajax="false" action="#">
                                 <p:printer target="gpBillPreviewPaysheet" ></p:printer>
@@ -157,6 +191,7 @@
                                                     total="#{hrReportController.total}"/>
                             </h:panelGroup>
                         </p:panel>
+
 
                     </p:panel>
 
