--- a/src/main/webapp/hr/hr_report_staff_shift.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_shift.xhtml
@@ -23,10 +23,10 @@
                             <p:calendar value="#{hrReportController.fromDate}" pattern="dd MMMM yyyy hh:mm:ss a" />
                             <h:outputLabel value="To : " />
                             <p:calendar value="#{hrReportController.toDate}" pattern="dd MMMM yyyy hh:mm:ss a" />
-                            <h:outputLabel value="Employee : "/>
-                            <hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>
                             <h:outputLabel value="Department : "/>
                             <hr:department value="#{hrReportController.reportKeyWord.department}"/>
+                            <h:outputLabel value="Employee : "/>
+                            <hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>    
                             <h:outputLabel value="Staff Category : "/>
                             <hr:completeStaffCategory value="#{hrReportController.reportKeyWord.staffCategory}"/>
                             <h:outputLabel value="Staff Designation : "/>
@@ -36,18 +36,41 @@
                         </h:panelGrid>
 
                         <p:commandButton ajax="false" value="Process" action="#{hrReportController.createStaffShift()}"/>
-                         <p:commandButton ajax="false" value="Process Lie Allowed" action="#{hrReportController.createStaffShiftLieAllowed()}"/>
-                         <p:commandButton ajax="false" value="Process Worked" action="#{hrReportController.createStaffShiftWorked()}"/>
-                         <p:commandButton ajax="false" value="Process Worked Lie Allowed" action="#{hrReportController.createStaffShiftLieAllowedWorked()}"/>
+                        <p:commandButton ajax="false" value="Process Lie Allowed" action="#{hrReportController.createStaffShiftLieAllowed()}"/>
+                        <p:commandButton ajax="false" value="Process Worked" action="#{hrReportController.createStaffShiftWorked()}"/>
+                        <p:commandButton ajax="false" value="Process Worked Lie Allowed" action="#{hrReportController.createStaffShiftLieAllowedWorked()}"/>
                         <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" onclick="onSubmitButton();" >
                             <pe:exporter type="xlsx" target="tb1" fileName="hr_report_attendance"  />
                         </p:commandButton>
                         <p:commandButton value="Print" ajax="false" action="#" >
                             <p:printer target="gpBillPreview" ></p:printer>
                         </p:commandButton>
-                        <p:panel id="gpBillPreview" >
+                        <p:panel id="gpBillPreview" styleClass="noBorder summeryBorder" >
 
                             <p:dataTable id="tb1" value="#{hrReportController.staffShifts}" var="ss">
+                                <f:facet name="header">
+                                    <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                                    <h:outputLabel value="Staff Shift Report (Staff Shift)"/>
+                                    <br/>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.department ne null}" >
+                                        <h:outputLabel value="Department : #{hrReportController.reportKeyWord.department.name}"/>
+                                        <br/>
+                                    </h:panelGroup>
+                                    <h:panelGroup rendered="#{hrReportController.reportKeyWord.staff ne null}" >
+                                        <h:outputLabel value="Staff : #{hrReportController.reportKeyWord.staff.person.name}"/>
+                                        <br/>
+                                    </h:panelGroup>
+                                    <h:outputLabel value="  From : "  />
+                                    <h:outputLabel  value="#{hrReportController.fromDate}" >
+                                        <f:convertDateTime pattern="dd MM yy "/>
+                                    </h:outputLabel>
+                                    <h:outputLabel/>
+                                    <h:outputLabel/>
+                                    <h:outputLabel value="  To : "/> 
+                                    <h:outputLabel  value="#{hrReportController.toDate}">
+                                        <f:convertDateTime pattern="dd MM yy "/>
+                                    </h:outputLabel>
+                                </f:facet>
                                 <p:column headerText="Department Name">
                                     #{ss.staff.department.name}
                                 </p:column>
@@ -69,7 +92,7 @@
                                 <p:column headerText="Shift Date">
                                     #{ss.shiftDate}
                                 </p:column>
-                                
+
                                 <p:column headerText="Shift Start">
                                     #{ss.shiftStartTime}
                                 </p:column>
@@ -105,7 +128,13 @@
                                 <p:column headerText="Lieu Utilized">
                                     #{ss.lieuQtyUtilized}
                                 </p:column>
-
+                                <f:facet name="footer">
+                                    <p:outputLabel value="Print By : #{sessionController.loggedUser.webUserPerson.name} - " />
+                                    <p:outputLabel value="Print At : " />
+                                    <p:outputLabel value="#{commonController.currentDateTime}" >
+                                        <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a " />
+                                    </p:outputLabel>
+                                </f:facet>
                             </p:dataTable>
                         </p:panel>
 
