--- a/src/main/webapp/hr/hr_shift_report.xhtml
+++ b/src/main/webapp/hr/hr_shift_report.xhtml
@@ -26,8 +26,13 @@
                 <h:outputLabel value="Show Only without Hide-Shift"/>
                 <p:selectBooleanCheckbox value="#{shiftController.checked}"/>
 
-                <p:panel id="datatable" header="Entered Shift">
-                    <p:dataTable id="tbl1" value="#{shiftController.shiftList}" var="p">                       
+                <p:panel id="datatable" styleClass="noBorder summeryBorder">
+                    <p:dataTable id="tbl1" value="#{shiftController.shiftList}" var="p">  
+                        <f:facet name="header">
+                            <h:outputLabel value="#{sessionController.loggedUser.institution.name}" /><br></br>
+                            <h:outputLabel value="Entered Shift Report"/>
+                            <br/>
+                        </f:facet>
 
                         <p:column headerText="Roster Name" filterBy="#{p.roster.name}" sortBy="#{p.roster.name}">
                             <h:outputLabel value="#{p.roster.name}"></h:outputLabel>
@@ -118,7 +123,13 @@
                                                 <p:column headerText="Ceated By">
                                                     <h:outputLabel value="#{p.creater.webUserPerson.nameWithTitle}"></h:outputLabel>
                                                 </p:column>-->
-
+                        <f:facet name="footer">
+                            <p:outputLabel value="Print By : #{sessionController.loggedUser.webUserPerson.name} - " />
+                            <p:outputLabel value="Print At : " />
+                            <p:outputLabel value="#{commonController.currentDateTime}" >
+                                <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a " />
+                            </p:outputLabel>
+                        </f:facet>
                     </p:dataTable>
                 </p:panel>
 
